# by-flask-starter

./: Dockerfile  README.md  compose.yaml  init_git_and_push.bat  init_git_and_push.sh  pyproject.toml  requirements.txt
src/by_flask_starter/: __init__.py  __main__.py  routes.py
tests/: test_app.py
